--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,17 +29,18 @@
 			<link rel="stylesheet" href="css/jquery-ui.css">			
 			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="css/personal.css">
 		</head>
 		<body>	
 			  <header id="header" id="home">
 		  		<div class="header-top">
 		  			<div class="container">
 				  		<div class="row align-items-center">
-				  			<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-				        		Reparaciones MRH		
+				  			<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding logo">
+				        		<span class="span_1">Reparaciones</span><span class="span_2">MRH</span>		
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-								<a class="btns" href="tel:670 599 843">670 599 843</a>
+									<a class="btns" href="tel:670 599 843">670 599 843</a>
 				  				<a class="btns" href="mailto:soporte@jatetu.com">mariano10mad@gmail.com</a>		
 				  				<a class="icons" href="tel:670 599 843">
 				  					<span class="lnr lnr-phone-handset"></span> 670 599 843
@@ -51,27 +52,6 @@
 				  		</div>			  					
 		  			</div>
 				</div>
-			    <!--<div class="container main-menu">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">Acerca de</a></li>
-				          <li><a href="services.html">Servicios</a></li>
-				          <li><a href="opening-hour.html">Horario de apertura</a></li>
-				          <li><a href="pricing.html">Precios</a></li>				          	          
-				          <li><a href="elements.html">Trabajos</a></li>				          	          
-				          <li><a href="contact.html">Contacto</a></li>
-				        </ul>
-				      </nav>--><!-- #nav-menu-container -->
-			      	<!--<div class="menu-social-icons">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-dribbble"></i></a>
-						<a href="#"><i class="fa fa-behance"></i></a>
-					</div>	    		
-			    	</div>
-			    </div>-->
 			  </header><!-- #header -->
 
 			<!-- start banner Area -->
@@ -94,31 +74,77 @@
 			<!-- End banner Area -->
 
 			<!-- Start open-hour Area -->
-			<!--<section class="open-hour-area">
+			<section class="open-hour-area">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-12 open-hour-wrap">
-							<h1>Horarios de contacto</h1>
-							<p>
-								Texto
-							</p>
-							<a class="open-btn" href="#"> <span class="circle"></span>Texto</a>
-							<div class="date-list d-flex flex-row justify-content-center">
-								<ul class="colm-1">
-									<li>Lunes - Viernes</li>
-									<li>Sábado</li>
-									<li>Domingo</li>
-								</ul>
-								<ul class="colm-2">
-									<li><span>:</span>   10:00am a 05:00pm</li>
-									<li><span>:</span>   12:00am a 03:00pm</li>
-									<li><span>:</span>   cerrado</li>
-								</ul>								
-							</div>
+							<img src="img/logos/logotipo-aeg.png" />
+							<img src="img/logos/logotipo-ariston.png" />
+							<img src="img/logos/logotipo-aspes.png" />
+							<img src="img/logos/logotipo-balay.png" />
+							<img src="img/logos/logotipo-baxi.png" />
+							<img src="img/logos/logotipo-baxiroca.png" />
+							<img src="img/logos/logotipo-beko.png" />
+							<img src="img/logos/logotipo-beretta.png" />
+							<img src="img/logos/logotipo-biasi.png" />
+							<img src="img/logos/logotipo-bosch.png" />
+							<img src="img/logos/logotipo-buderus.png" />
+							<img src="img/logos/logotipo-candy.png" />
+							<img src="img/logos/logotipo-carrier.png" />
+							<img src="img/logos/logotipo-cata.png" />
+							<img src="img/logos/logotipo-chaffoteaux.png" />
+							<img src="img/logos/logotipo-cointra.png" />
+							<img src="img/logos/logotipo-corbero.png" />
+							<img src="img/logos/logotipo-daewoo.png" />
+							<img src="img/logos/logotipo-daikin.png" />
+							<img src="img/logos/logotipo-dedietrich.png" />
+							<img src="img/logos/logotipo-domusa.png" />
+							<img src="img/logos/logotipo-ecron.png" />
+							<img src="img/logos/logotipo-edesa.png" />
+							<img src="img/logos/logotipo-electrolux.png" />
+							<img src="img/logos/logotipo-eurofred.png" />
+							<img src="img/logos/logotipo-fagor.png" />
+							<img src="img/logos/logotipo-fer.png" />
+							<img src="img/logos/logotipo-ferroli.png" />
+							<img src="img/logos/logotipo-franke.png" />
+							<img src="img/logos/logotipo-fujitsu.png" />
+							<img src="img/logos/logotipo-haier.png" />
+							<img src="img/logos/logotipo-hermann.png" />
+							<img src="img/logos/logotipo-hoover.png" />
+							<img src="img/logos/logotipo-indesit.png" />
+							<img src="img/logos/logotipo-junkers.png" />
+							<img src="img/logos/logotipo-lennox.png" />
+							<img src="img/logos/logotipo-lg.png" />
+							<img src="img/logos/logotipo-liebherr.png" />
+							<img src="img/logos/logotipo-manaut.png" />
+							<img src="img/logos/logotipo-mepansa.png" />
+							<img src="img/logos/logotipo-miele.png" />
+							<img src="img/logos/logotipo-mitsubishi.png" />
+							<img src="img/logos/logotipo-muchasmaz.png" />
+							<img src="img/logos/logotipo-neckar.png" />
+							<img src="img/logos/logotipo-negarra.png" />
+							<img src="img/logos/logotipo-newpol.png" />
+							<img src="img/logos/logotipo-orbegozo.png" />
+							<img src="img/logos/logotipo-otsein.png" />
+							<img src="img/logos/logotipo-panasonic.png" />
+							<img src="img/logos/logotipo-roca.png" />
+							<img src="img/logos/logotipo-saivod.png" />
+							<img src="img/logos/logotipo-samsung.png" />
+							<img src="img/logos/logotipo-saunierduval.png" />
+							<img src="img/logos/logotipo-siemens.png" />
+							<img src="img/logos/logotipo-smeg.png" />
+							<img src="img/logos/logotipo-teka.png" />
+							<img src="img/logos/logotipo-tifell.png" />
+							<img src="img/logos/logotipo-toshiba.png" />
+							<img src="img/logos/logotipo-vaillant.png" />
+							<img src="img/logos/logotipo-viessmann.png" />
+							<img src="img/logos/logotipo-whirlpool.png" />
+							<img src="img/logos/logotipo-wolf.png" />
+							<img src="img/logos/logotipo-zanussi.png" />
 						</div>
 					</div>
 				</div>	
-			</section>-->
+			</section>
 			<!-- End open-hour Area -->
 			
 			
@@ -232,7 +258,7 @@
 									<span class="lnr lnr-rocket"></span>
 								</div>
 								<div class="details">
-									<h4>24/7 emergencias</h4>
+									<h4>Garantía de los trabajos realizados</h4>
 									<p>
 										
 									</p>
