Cambios del layout

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,12 +40,12 @@
 				        		<span class="span_1">Reparaciones</span><span class="span_2">MRH</span>		
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-									<a class="btns" href="tel:670 599 843">670 599 843</a>
-				  				<a class="btns" href="mailto:soporte@jatetu.com">mariano10mad@gmail.com</a>		
+								<a class="btns" href="tel:670 599 843">670 599 843</a>
+				  				<a class="btns" href="mailto:mariano10mad@gmail.com">mariano10mad@gmail.com</a>		
 				  				<a class="icons" href="tel:670 599 843">
-				  					<span class="lnr lnr-phone-handset"></span> 670 599 843
+				  					<span class="lnr lnr-phone-handset"></span>
 				  				</a>
-				  				<a class="icons" href="mailto:soporte@jatetu.com">
+				  				<a class="icons" href="mailto:mariano10mad@gmail.com">
 				  					<span class="lnr lnr-envelope"></span>
 				  				</a>		
 				  			</div>
@@ -60,6 +60,9 @@
 				<div class="container">
 					<div class="row fullscreen d-flex justify-content-center align-items-center">
 						<div class="banner-content col-lg-9 col-md-12 justify-content-center">
+							<a href="tel:670 599 843">
+								<img src="img/CAM_flag.svg" />
+							</a>
 							<a href="tel:670 599 843" class="primary-btn header-btn text-uppercase mt-10">¡Llámenos! 670 599 843</a>
 							<h1>
 								Reparación de sus equipos de Aire Acondicionado
@@ -117,7 +120,7 @@
 							<img src="img/logos/logotipo-lg.png" />
 							<img src="img/logos/logotipo-liebherr.png" />
 							<img src="img/logos/logotipo-manaut.png" />
-							<img src="img/logos/logotipo-mepansa.png" />
+							<img src="img/logos/logotipo-mepamsa.png" />
 							<img src="img/logos/logotipo-miele.png" />
 							<img src="img/logos/logotipo-mitsubishi.png" />
 							<img src="img/logos/logotipo-muchasmaz.png" />
@@ -216,7 +219,7 @@
 						<div class="col-lg-6 col-md-6">
 							<div class="single-feature d-flex flex-row">
 								<div class="icon">
-									<span class="lnr lnr-rocket"></span>
+									<span class="lnr lnr-checkmark-circle"></span>
 								</div>
 								<div class="details">
 									<h4>Atención 24 horas</h4>
@@ -229,7 +232,7 @@
 						<div class="col-lg-6 col-md-6">
 							<div class="single-feature d-flex flex-row">
 								<div class="icon">
-									<span class="lnr lnr-rocket"></span>
+									<span class="lnr lnr-checkmark-circle"></span>
 								</div>
 								<div class="details">
 									<h4>Todas las marcas</h4>
@@ -242,7 +245,7 @@
 						<div class="col-lg-6 col-md-6">
 							<div class="single-feature d-flex flex-row">
 								<div class="icon">
-									<span class="lnr lnr-rocket"></span>
+									<span class="lnr lnr-checkmark-circle"></span>
 								</div>
 								<div class="details">
 									<h4>Toda la Comunidad de Madrid</h4>
@@ -255,7 +258,7 @@
 						<div class="col-lg-6 col-md-6">
 							<div class="single-feature d-flex flex-row">
 								<div class="icon">
-									<span class="lnr lnr-rocket"></span>
+									<span class="lnr lnr-checkmark-circle"></span>
 								</div>
 								<div class="details">
 									<h4>Garantía de los trabajos realizados</h4>
