Cambios de texto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,7 +68,7 @@
 								Reparación de sus equipos de Aire Acondicionado
 							</h1>
 							<p class="text-white mx-auto">
-								Más de 25 años de experiencia. Todas las marcas. 24 horas al día. Toda la Comunidad de Madrid.	
+								Más de 25 años de experiencia. Todas las marcas. Desplazamiento gratuito. Toda la Comunidad de Madrid.	
 							</p>
 						</div>											
 					</div>
@@ -222,7 +222,7 @@
 									<span class="lnr lnr-checkmark-circle"></span>
 								</div>
 								<div class="details">
-									<h4>Atención 24 horas</h4>
+									<h4>Desplazamiento gratuito</h4>
 									<p>
 										
 									</p>
